5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1859_2178.log
== SUBMITION (2019-06-26 14:17:34) 
-- CODE:
from numpy import*

m = array(eval(input()))

for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i != j):
			s = s + m[i,j]

print(round(s, 2))
-- EXECUTION TIME:
1.20079
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/2178/main.py", line 8, in <module>
    s = s + m[i,j]
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:18:14) 
-- CODE:
from numpy import*

m = array(eval(input()))

for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i != j):
			s = s + m[i,j]

print(round(s, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:18:43) 
-- CODE:
from numpy import*

m = array(eval(input()))
s = 0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i != j):
			s = s + m[i,j]

print(round(s, 2))
-- EXECUTION TIME:
1.14013
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
106.0
---- user output:
106
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
3.06
---- user output:
3.06
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
1048.7
---- user output:
1048.7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:44:02) 
-- CODE:
from numpy import*

m = array(eval(input()))
s = 0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i != j):
			s = s + m[i,j]

print(round(s, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:59:55) 
-- CODE:
from numpy import*

m = array(eval(input()))
s = 0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i != j):
			s = s + m[i,j]

print(round(s, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:00:31) 
-- CODE:
from numpy import*

m = array(eval(input()))
s = 0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i != j):
			s = s + m[i,j]

print(round(s, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
